resize scrollup buttton on smallest screen, fix read more article link and scroll button script

--- a/css/global.css
+++ b/css/global.css
@@ -571,4 +571,10 @@ sup {
   .copyright {
     font-size: 0.5rem !important;
   }
+
+  .scroll-btn {
+    font-size: 1.4rem;
+    width: 40px;
+    height: 40px;
+  }
 }
